--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,2 @@
 client_tcp: $/client_tcp.cpp
-	g++ -o client_tcp client_tcp.cpp $(shell find ../shared/src -name 'AuthenticationManager.cpp') $(shell find ../shared/src -name 'CommunicationManager.cpp')
+	g++ -o client_tcp client_tcp.cpp $(shell find ../shared/src -name 'CommunicationManager.cpp')
