Send notifications to followers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,19 @@
         "memory_resource": "cpp",
         "stop_token": "cpp",
         "xstring": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "xthread": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocinfo": "cpp",
+        "xlocnum": "cpp",
+        "xmemory": "cpp",
+        "xmemory0": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
 }
