Implemented following with notifications

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,2 @@
 client_tcp: $/client_tcp.cpp
-	g++ -o client_tcp client_tcp.cpp $(shell find ../shared/src -name \*.cpp) -lpthread
+	g++ -g -o client_tcp client_tcp.cpp $(shell find ../shared/src -name \*.cpp) -lpthread
